--- a/ServerDemo/Pages/_Layout.cshtml
+++ b/ServerDemo/Pages/_Layout.cshtml
@@ -10,6 +10,7 @@
 <head>
     <component type="typeof(CloudHeadInit)" param-CloudPage="cloudPage" render-mode="Static" />
     <script src="./_content/AngryMonkey.Cloud.Components/js/amc-components.min.js"></script>
+    <link href="./_content/AngryMonkey.Cloud.Components/css/amc-components.min.css" rel="stylesheet">
 </head>
 <body>
     @RenderBody()
