--- a/ServerDemo/wwwroot/css/site.css
+++ b/ServerDemo/wwwroot/css/site.css
@@ -122,6 +122,22 @@ samp {
   font-family: monospace;
   font-size: 1rem;
 }
+html:has(.--popup) {
+  overflow: hidden !important;
+}
+html:has(.--popup) .--popup {
+  position: fixed;
+  display: flex;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  margin: 0;
+  z-index: 9999;
+  background-color: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+}
 section,
 aside {
   display: flex;
@@ -267,4 +283,7 @@ body .--button {
 body .--button:hover {
   background-color: var(--LinkColor);
   color: #fff;
+}
+html:has(dialog[open]) {
+  overflow: hidden !important;
 }
