--- a/Components/Dialog/dialog.less
+++ b/Components/Dialog/dialog.less
@@ -1,59 +1,57 @@
 ﻿@import '../General/css/common.less';
 
 .amc-dialog {
-	.ComponentsDefault();
-	background-color: rgba(255, 255, 255, .7);
-	width: 100vw;
-	height: 100vh;
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	cursor: pointer;
-	touch-action: none;
-	z-index: 99999999;
+    .ComponentsDefault();
+    --backdropColor: rgba(255, 255, 255, .7);
+    --backgroundColor: #fff;
+    --shadowColor: rgba(0, 0, 0, 0.3);
+    padding: 10px;
+    max-width: 600px;
+    width: 50vw;
+    background-color: var(--backgroundColor);
+    border: none;
+    box-shadow: 0px 0px 4px var(--shadowColor);
 
-	&-content {
-		padding: 5px;
-		max-width: 600px;
-		width: 50vw;
-	}
+    @media (prefers-color-scheme: dark) {
+        --backdropColor: rgba(0, 0, 0, .7);
+    }
 
-	&-title {
-		font-size: 2em;
-	}
 
-	&-buttons {
-		margin-top: 20px;
-		display: flex;
-		justify-content: right;
-		padding: 1px; 
-		gap: 5px;
+    &::backdrop {
+        background-color: var(--backdropColor);
+    }
 
-		button {
-			&,
-			&:focus,
-			&:hover {
-				padding: .4em .6em;
-				color: var(--amc-accentColor);
-				background-color: #fff;
-				border-radius: 4px;
-				border: 1px solid transparent;
+    &-title {
+        font-size: 2em;
+    }
 
-				&:focus {
-					border-color: var(--amc-accentColor);
-				}
+    &-buttons {
+        margin-top: 20px;
+        display: flex;
+        justify-content: right;
+        padding: 1px;
+        gap: 5px;
 
-				&:hover {
-					color: #fff;
-					background-color: var(--amc-accentColor);
-					border-color: var(--amc-accentColor);
-				}
-			}
-		}
-	}
+        button {
+            &,
+            &:focus,
+            &:hover {
+                padding: .4em .6em;
+                color: var(--amc-accentColor);
+                background-color: #fff;
+                border-radius: 4px;
+                border: 1px solid transparent;
+
+                &:focus {
+                    border-color: var(--amc-accentColor);
+                }
+
+                &:hover {
+                    color: #fff;
+                    background-color: var(--amc-accentColor);
+                    border-color: var(--amc-accentColor);
+                }
+            }
+        }
+    }
 }
