Dialog: Add automatic close option to buttons

--- a/ServerDemo/Pages/DialogPage.razor
+++ b/ServerDemo/Pages/DialogPage.razor
@@ -35,9 +35,11 @@
 		{
 			new DialogButton(){
 				Text = "OK",
+				AutoClose = false,
 				OnReply = () => {
 					DialogReply = "Ok";
 					StateHasChanged();
+					dialog.Close();
 				}
 			},
 
